--- a/_posts/misc/2023-08-11-seccamp2023.md
+++ b/_posts/misc/2023-08-11-seccamp2023.md
@@ -20,6 +20,12 @@ similarPosts:
 
 セキュリティキャンプ2023にL1講師として参加したので、感想と反省の雑文です。
 
+### はじめに
+
+L1暗号化通信ゼミにはプリミティブコースとプロトコルコースの2種類を設けてゼミを行いました。
+私はプロトコルコース側の講師であるため、ここではプロトコル側でどんなことをしたのかをメインに書いていきます。
+プリミティブコースについて知りたい方は、緑川先生 (@elliptic_shiho) の [seccamp 2023 講師参加記.md](https://gist.github.com/elliptic-shiho/d26b5251d50347d6fbdb2336d960b9fc) もご覧ください。
+
 ### 目指すべき目標
 
 学校教育ではいかにテストや試験で高い点数を取ることができるか、という部分に注目されがちです。
@@ -139,7 +145,7 @@ L1暗号化通信ゼミのプロトコルコースの応募課題としては、
 
 次回の応募課題については、評価基準として「ライブラリを利用して誤魔化すのではなくRFCなどの元の仕様から自分で実装した痕跡があること」と「修了後を見据えたやりたいことがあること」は明記しようかなと思っています。
 暗号技術のライブラリが使用できます、と言われても探索者としては不十分で、暗号技術に対する知見を評価できないからです。
-また、設問に対する回答が丁寧で詳しく説明されていてRFCなどの原文も参照していて良い感じだったんだけど、修了後を見据えたやりたいことが明確ではなかったために優先度を下げた応募者の方もおり、非常に惜しいという気持ちなので、もしこの駄文を見てくださっていて次回もチャンスがあるのであれば、目的・目標設定を明確化した上で、ぜひ挑戦してみてほしいです。暗号化通信ゼミの講師一同お待ちしております。
+また、設問に対する回答が丁寧で詳しく説明されていてRFCなどの原文も参照していて良い感じだったんだけど、修了後を見据えたやりたいことが明確ではなかったために優先度を下げた応募者の方もおり、非常に惜しいという気持ちなので、もしこの駄文を見てくださっていて次回もチャンスがあるのであれば、目的・目標設定を明確化した上で、ぜひ挑戦してみてほしいです。暗号化通信ゼミの講師一同お待ちしております（次回も講師として呼ばれたらの話ですが）。
 
 交通系ICカードを服の中に入れたまま洗濯しちゃったり、自宅に帰った後で寝るときに使ったタオルをホテルに忘れて電話連絡で郵送してもらうなど、色々なやらかしもありましたが、この辺で筆を置くことにします。
 
