--- a/_posts/misc/2023-08-11-seccamp2023.md
+++ b/_posts/misc/2023-08-11-seccamp2023.md
@@ -134,9 +134,16 @@ L1暗号化通信ゼミのプロトコルコースの応募課題としては、
 - QUIC
     - [RFC 9000 - QUIC: A UDP-Based Multiplexed and Secure Transport](https://datatracker.ietf.org/doc/rfc9000/)
     - [RFC 9001 - Using TLS to Secure QUIC](https://datatracker.ietf.org/doc/rfc9001/)
+    - [Draft - P2P QUIC](https://www.ietf.org/archive/id/draft-thatcher-p2p-quic-00.html)
 - DNS
     - [RFC 8484 - DNS Queries over HTTPS (DoH)](https://datatracker.ietf.org/doc/html/rfc8484)
     - [RFC 9230 - Oblivious DNS over HTTPS](https://datatracker.ietf.org/doc/html/rfc9230)
+    - [ZTLS: A DNS-based Approach to Zero Round Trip Delay in TLS handshake \| Proceedings of the ACM Web Conference 2023](https://dl.acm.org/doi/abs/10.1145/3543507.3583516)
+- トンネリング
+    - [RFC 9298: Proxying UDP in HTTP](https://www.rfc-editor.org/rfc/rfc9298.html)
+    - [Draft - Proxying IP in HTTP](https://www.ietf.org/archive/id/draft-ietf-masque-connect-ip-13.html)
+    - [Draft - Proxying Ethernet in HTTP](https://www.ietf.org/archive/id/draft-asedeno-masque-connect-ethernet-00.html)
+    - [Draft - The MASQUE Protocol](https://datatracker.ietf.org/doc/html/draft-schinazi-masque-02)
 - 証明書
     - [RFC 9162 - Certificate Transparency Version 2.0](https://datatracker.ietf.org/doc/html/rfc9162)
     - [RFC 8555 - Automatic Certificate Management Environment (ACME)](https://datatracker.ietf.org/doc/html/rfc8555)
