update find posts

--- a/_posts/shell/2017-06-11-find-exec.md
+++ b/_posts/shell/2017-06-11-find-exec.md
@@ -1,9 +1,8 @@
 ---
 layout:        post
-title:         "find -exec でパイプを介した複数コマンドの実行"
+title:         "find -exec でパイプを使った複数コマンドを実行する"
 date:          2017-06-11
 category:      Shell
-author:        tex2e
 cover:         /assets/cover14.jpg
 redirect_from:
 comments:      true
@@ -11,6 +10,8 @@ published:     true
 ---
 
 find -exec の中でパイプを使って複数コマンドを実行する方法について説明します。
+
+### パイプを使った実行例
 
 ここでは、カレントディレクトリ以下にあるファイルの中身を全て小文字にするコマンドを書くことを例に説明していきます。
 一つのファイルだけであれば、次のコマンドでできます。
@@ -27,14 +28,16 @@ find . -type f -name '*.txt' -exec cat {} | tr 'A-Z' 'a-z' > {}.lower \;
 ```
 
 原因は -exec の後ろには1つのコマンドしか取れないからです。
+
+### find でパイプを使う方法
+
 代わりに、`sh -c "実行したいコマンド"` と書くことで複数のコマンドを一つのコマンドにまとめることで動くようになります。
 
 ```bash
 find . -type f -name '*.txt' -exec sh -c "cat {} | tr 'A-Z' 'a-z' > {}.lower" \;
 ```
 
-ワンライナー以外の回答
--------------------
+### パイプの処理を関数に置き換える方法
 
 もしシェルスクリプトを書いているなら、あえてワンライナーにする必要はないと思います。
 複数のコマンドを一つのコマンドにまとめるという点で関数を使う方法があります。
@@ -46,8 +49,9 @@ tolower() {
 find . -type f -name '*.txt' -exec tolower {} \;
 ```
 
+### findの結果をfor文で回す方法
+
 その他に挙げるとすれば、`-exec` を使わないで `for-in` を使う方法もあります。
-個人的には、この書き方が一番可読性が高いと思います。
 
 ```bash
 for file in $(find . -type f -name '*.txt'); do
