update post, protocol/oauth

--- a/_posts/protocol/2022-06-19-oauth.md
+++ b/_posts/protocol/2022-06-19-oauth.md
@@ -189,6 +189,42 @@ OAuthは認可のプロトコルですが、リソースサーバがユーザ情
 - アクセストークンでリソースサーバにアクセスできることは認証の証明になりません。リフレッシュトークンの仕組みを使えば、ユーザがいなくてもトークンを取得することができるためです。アクセストークンを持っていてもユーザが必ず存在するわけではありません。
 - OAuth認証をインプリシットフローで運用してはいけません。トークンエンドポイントにリクエストしなくてもアクセストークンを取得できるインプリシットフローでは、攻撃者がアクセストークンをコピーして、それを別のアプリのログインに使用できるようになるからです。この問題はインプリシットフローの代わりに認可コードフローを使うことで解決できます。
 
+#### トークンイントロスペクションによるアクセストークンの情報取得
+リソースサーバは、Authorizationヘッダで渡されたアクセストークンをOAuth認可サーバのトークンイントロスペクションAPI ([RFC 7662](https://datatracker.ietf.org/doc/html/rfc7662)) に送信します。そこから返却されるアクセストークンの情報を取得して、アクセストークンの検証を行い、アクセス可否を判断します。
+トークンイントロスペクションAPIの結果で検証が必須の項目・推奨の項目は以下の通りです。
+- 検証が必須の項目
+  - **active**属性（有効性）の値が「true」であること
+  - **exp**属性（有効期限）の有効期限が切れていないこと
+  - **scope**属性（スコープ）の値に要求されているAPIに対応するスコープが含まれていること
+- 検証が推奨されている項目
+  - **iss**属性（発行者）の値がOAuth認可サーバを表す値と一致すること
+  - **token_type**属性（タイプ）の値が「Bearer」であること
+  - **iat**属性（発行時刻）が現在時刻よりも過去であること
+
+#### OAuth 2.0 関連のRFC一覧
+
+- [The OAuth 2.0 Authorization Framework](https://docs.authlib.org/en/latest/basic/oauth2.html)
+  - [RFC6749: The OAuth 2.0 Authorization Framework](https://docs.authlib.org/en/latest/specs/rfc6749.html)
+  - [RFC6750: The OAuth 2.0 Authorization Framework: Bearer Token Usage](https://docs.authlib.org/en/latest/specs/rfc6750.html)
+  - [RFC7009: OAuth 2.0 Token Revocation](https://docs.authlib.org/en/latest/specs/rfc7009.html)
+  - [RFC7523: JWT Profile for OAuth 2.0 Client Authentication and Authorization Grants](https://docs.authlib.org/en/latest/specs/rfc7523.html)
+  - [RFC7591: OAuth 2.0 Dynamic Client Registration Protocol](https://docs.authlib.org/en/latest/specs/rfc7591.html)
+  - [RFC7592: OAuth 2.0 Dynamic Client Registration Management Protocol](https://docs.authlib.org/en/latest/specs/rfc7592.html)
+  - [RFC7636: Proof Key for Code Exchange by OAuth Public Clients](https://docs.authlib.org/en/latest/specs/rfc7636.html)
+  - [RFC7662: OAuth 2.0 Token Introspection](https://docs.authlib.org/en/latest/specs/rfc7662.html)
+  - [RFC8414: OAuth 2.0 Authorization Server Metadata](https://docs.authlib.org/en/latest/specs/rfc8414.html)
+  - [RFC8628: OAuth 2.0 Device Authorization Grant](https://docs.authlib.org/en/latest/specs/rfc8628.html)
+- [Javascript Object Signing and Encryption](https://docs.authlib.org/en/latest/jose/index.html)
+  - [RFC7515: JSON Web Signature](https://docs.authlib.org/en/latest/jose/jws.html)
+  - [RFC7516: JSON Web Encryption](https://docs.authlib.org/en/latest/jose/jwe.html)
+  - [RFC7517: JSON Web Key](https://docs.authlib.org/en/latest/jose/jwk.html)
+  - [RFC7518: JSON Web Algorithms](https://docs.authlib.org/en/latest/specs/rfc7518.html)
+  - [RFC7519: JSON Web Token](https://docs.authlib.org/en/latest/jose/jwt.html)
+  - [RFC7638: JSON Web Key (JWK) Thumbprint](https://docs.authlib.org/en/latest/specs/rfc7638.html)
+  - [RFC7797: JSON Web Signature (JWS) Unencoded Payload Option](https://datatracker.ietf.org/doc/html/rfc7797)
+  - [RFC8037: ECDH in JWS and JWE](https://docs.authlib.org/en/latest/specs/rfc8037.html)
+
+
 -----
 
 ### OpenID Connect
