new post, secminicamp2023

--- a/_posts/misc/2022-12-23-seccamp2022.md
+++ b/_posts/misc/2022-12-23-seccamp2022.md
@@ -16,6 +16,7 @@ similarPosts:
 - [../misc/seccamp2021, seccamp2021チュータ参加記]
 - [../misc/seccamp2022, seccamp2022講師参加記]
 - [../misc/seccamp2023, seccamp2023講師参加記]
+- [../misc/secminicamp2023, セキュリティ・ミニキャンプin新潟 2023講師参加記]
 ---
 
 感想と反省の雑文です。
