--- a/_posts/misc/2019-08-18-seccamp2019.md
+++ b/_posts/misc/2019-08-18-seccamp2019.md
@@ -16,6 +16,7 @@ similarPosts:
 - [../misc/seccamp2021, seccamp2021チュータ参加記]
 - [../misc/seccamp2022, seccamp2022講師参加記]
 - [../misc/seccamp2023, seccamp2023講師参加記]
+- [../misc/secminicamp2023, セキュリティ・ミニキャンプin新潟 2023講師参加記]
 ---
 
 セキュリティ・キャンプ全国大会2019では初めてチュータとして参加させて頂いたので、チュータ業務はどんな感じなのかという話と、私の記憶がある限りの全ての出来事をここに書いていこうと思います。
