--- a/_posts/misc/2021-10-03-seccamp2021.md
+++ b/_posts/misc/2021-10-03-seccamp2021.md
@@ -16,6 +16,7 @@ similarPosts:
 - [../misc/seccamp2021, seccamp2021チュータ参加記]
 - [../misc/seccamp2022, seccamp2022講師参加記]
 - [../misc/seccamp2023, seccamp2023講師参加記]
+- [../misc/secminicamp2023, セキュリティ・ミニキャンプin新潟 2023講師参加記]
 ---
 
 セキュリティ・キャンプ全国大会2021 オンラインにチュータとして参加しましたので、今回で3回目となりますが、参加記を書いていこうと思います。
