--- a/_posts/powershell/2022-04-14-sed.md
+++ b/_posts/powershell/2022-04-14-sed.md
@@ -49,3 +49,4 @@ Set-Content : 別のプロセスで使用されているため、プロセスは
 
 #### 参考文献
 - [powershellでsed - Qiita](https://qiita.com/kiduki/items/a9784c5f65955e50c4bf)
+- [『Windows PowerShellクックブック』 2008/10](https://amzn.to/3PkOtKf) (p.113)
