refactor: change category

--- a/_posts/program/elixir/2017-01-05-elixir-nlp100-00-09.md
+++ b/_posts/program/elixir/2017-01-05-elixir-nlp100-00-09.md
@@ -1,12 +1,11 @@
 ---
 layout:        post
-title:         "言語処理100本ノック（第1章）"
-menutitle:     "言語処理100本ノック in Elixir（第1章）"
+title:         "[Elixir] 言語処理100本ノック（第1章）"
 date:          2017-01-05
-category:      Elixir
+category:      Program
 author:        tex2e
 cover:         /assets/cover14.jpg
-redirect_from:
+redirect_from: /elixir/nlp100-00-09
 comments:      true
 published:     true
 ---
