--- a/_posts/psychology/2023-07-07-nudge.md
+++ b/_posts/psychology/2023-07-07-nudge.md
@@ -2,9 +2,9 @@
 layout:        post
 title:         "行動経済学におけるナッジ"
 date:          2023-07-07
-category:      Misc
+category:      Psychology
 cover:         /assets/cover14.jpg
-redirect_from:
+redirect_from: /misc/nudge
 comments:      true
 published:     true
 latex:         false
