--- a/_posts/psychology/2023-08-08-grid.md
+++ b/_posts/psychology/2023-08-08-grid.md
@@ -2,9 +2,9 @@
 layout:        post
 title:         "非認知能力におけるGRID (グリッド)"
 date:          2023-08-08
-category:      Misc
+category:      Psychology
 cover:         /assets/cover14.jpg
-redirect_from:
+redirect_from: /misc/grid
 comments:      true
 published:     true
 latex:         false
