--- a/_posts/psychology/2023-08-09-coaching.md
+++ b/_posts/psychology/2023-08-09-coaching.md
@@ -2,9 +2,9 @@
 layout:        post
 title:         "コーチング技術"
 date:          2023-08-09
-category:      Misc
+category:      Psychology
 cover:         /assets/cover14.jpg
-redirect_from:
+redirect_from: /misc/coaching
 comments:      true
 published:     true
 latex:         false
