--- a/_posts/powershell/2022-04-05-array.md
+++ b/_posts/powershell/2022-04-05-array.md
@@ -225,5 +225,5 @@ baz => 789
 以上です。
 
 ### 参考文献
-- Lee Holmes (著), 菅野 良二 (訳)『Windows PowerShellクックブック』O'REILLY, 2018/6
+- Lee Holmes (著), 菅野 良二 (訳)『[Windows PowerShellクックブック](https://amzn.to/3QwwEsn)』O'REILLY, 2018/6
 - [配列 - Windows PowerShell \| ++C++; // 未確認飛行 C](https://ufcpp.net/study/powershell/array.html)
