--- a/_posts/python/2023-12-16-mtls.md
+++ b/_posts/python/2023-12-16-mtls.md
@@ -102,3 +102,6 @@ curl --insecure --cacert ca-crt.pem --key client.key --cert client.crt https://l
 </figure>
 
 以上です。
+
+### 参考資料
+- [mr-satan1/mTLS-Flask-Template: Template for mutual TLS for Flask](https://github.com/mr-satan1/mTLS-Flask-Template)
