--- a/_posts/misc/2023-08-11-seccamp2023.md
+++ b/_posts/misc/2023-08-11-seccamp2023.md
@@ -175,3 +175,33 @@ L1暗号化通信ゼミのプロトコルコースの応募課題としては、
 
 
 ---
+
+
+<!--
+- IPsec VPN / SSL VPN
+  - [【図解】初心者にも分かるVPNの仕組みと種類～スマホからの利用、メリット、具体的なサービス～ \| SEの道標](https://milestone-of-se.nesuke.com/nw-basic/grasp-nw/vpn-summary/)
+- SSTP
+  - [Secure Socket Tunneling Protocol - Wikipedia](https://en.wikipedia.org/wiki/Secure_Socket_Tunneling_Protocol)
+  - [SSTP-Client](https://sstp-client.sourceforge.net/)
+  - [sstp-project / sstp-client · GitLab](https://gitlab.com/sstp-project/sstp-client)
+  - [\[MS-SSTP\]: Secure Socket Tunneling Protocol (SSTP) \| Microsoft Learn](https://learn.microsoft.com/en-us/openspecs/windows_protocols/ms-sstp/c50ed240-56f3-4309-8e0c-1644898f0ea8)
+  - [macOS(M1, Monterey)でSSTP VPNを使いたい #VPN - Qiita](https://qiita.com/atsu1125/items/82d02e6d8dd5986d8ea2)
+  - [sstp-client — Homebrew Formulae](https://formulae.brew.sh/formula/sstp-client)
+  - [homebrew-core/Formula/sstp-client.rb at 57b647e16db33f32219cfbd6ab7089f9c382241d · Homebrew/homebrew-core](https://github.com/Homebrew/homebrew-core/blob/57b647e16db33f32219cfbd6ab7089f9c382241d/Formula/sstp-client.rb)
+  - [sorz/sstp-server: Secure Socket Tunneling Protocol (SSTP VPN) server for Linux.](https://github.com/sorz/sstp-server)
+  - [sstp-server · PyPI](https://pypi.org/project/sstp-server/)
+- SoftEther
+  - [1. SoftEther VPN の概要 - SoftEther VPN プロジェクト](https://ja.softether.org/4-docs/1-manual/1)
+  - [1.4 VPN の動作原理と通信方法 - SoftEther VPN プロジェクト](https://ja.softether.org/4-docs/1-manual/1/1.4)
+  - [1.6 VPN 通信の詳細 - SoftEther VPN プロジェクト](https://ja.softether.org/4-docs/1-manual/1._SoftEther_VPN_%E3%81%AE%E6%A6%82%E8%A6%81/1.6_VPN_%E9%80%9A%E4%BF%A1%E3%81%AE%E8%A9%B3%E7%B4%B0)
+  - [SoftEtherVPN/src/BUILD_UNIX.md at master · SoftEtherVPN/SoftEtherVPN](https://github.com/SoftEtherVPN/SoftEtherVPN/blob/master/src/BUILD_UNIX.md)
+- TUN/TAP
+  - [PythonでTUN/TAPを使う #Python - Qiita](https://qiita.com/bgpat/items/4ffdfb79f977d2476eca)
+- TCP Proxy
+  - [2.6 TCPプロキシーの構築 （サイバーセキュリティプログラミング Pythonで学ぶハッカーの思考） - Engineering Note](https://engineeringnote.hateblo.jp/entry/python/bhp/2-6)
+- SSH
+  - [paramiko/paramiko/transport.py at main · paramiko/paramiko](https://github.com/paramiko/paramiko/blob/main/paramiko/transport.py)
+- KLab Expert Camp
+  - [KLab Expert Camp（資料公開） - Google ドライブ](https://drive.google.com/drive/folders/1k2vymbC3vUk5CTJbay4LLEdZ9HemIpZe)
+
+-->
