--- a/_posts/psychology/2023-08-09-coaching.md
+++ b/_posts/psychology/2023-08-09-coaching.md
@@ -13,11 +13,20 @@ photoswipe:    false
 # feed:    false
 ---
 
-コーチングとは、答えを与える代わりに、答えを作り出すサポートを行うためのコミュニケーション技術です。
+コーチングとは、答えを与える代わりに、答えを作り出す支援を行うためのコミュニケーション技術です。
 その人の本当の目的や理想を明確にし、それを実現するための方法を探索したり、行動する勇気を与えることです。
-コーチングでは早く出来る限り高いところまで到達できるようにサポートすることを行います。
+コーチングの本質は、他者の変化や学び・成長を手助けすることです。
+
 
 ### コーチングの基本モデル
+
+いつ、どのようにして、あの熱意を失ってしまったのか。忙しい日々を過ごす中で、私たちは自分の本物の熱意や願望を見失うこともあります。
+私たちはコーチとお話しする中で、人生において心から望む物事と、やらなければならない物事を明確に切り分け、本当にやりたいことを見つけることで、ポジティブなエネルギーとモチベーションを生み出すことを求めています。
+逆に、コーチは、現在直面している問題を修正する一時凌ぎのような解決では不十分で、その努力は持続可能なのかを考えなければなりません。
+その人からエネルギーを引き出すことができなければ、困難に直面した時に変化するための努力をやめてしまうためです。
+コーチングとは、持続可能な努力を続けることができる状況を作り出せる支援といえます。
+
+コーチングは対話から始まります。対話において向けるべき視点は以下のものがあります。
 
 - 質問ではなく探求する
     - あなたのことをより知りたいという気持ちを持つこと（相手に関心を向ける）
@@ -28,18 +37,44 @@ photoswipe:    false
         - 目的が何でゴールはどんな状態で、そのための効果的なアクションは何か
     - 勇気とは、クライアントのエネルギーであり、やりたい・やれそうという実感（自己効力感）
 
-#### 1. テーマ決め
+<br>
+
+### 1. テーマ決め
+
+テーマは最終的には将来の夢に繋げることを見据えて設定します。
+長期的な夢やビジョンがあるとき、人はそのビジョンからエネルギーを引き出し、困難があっても変化のための努力を続けることができるためです。
+長期的な夢やビジョンはすなわち「理想の自分」を明確にするところから始まります。
 
 - 今日話すことの内容を決める
-    - 「今日テーマとしてお話ししたいことは何ですか？」
+    - 「今日テーマとしてお話ししたいことはありますか？」
     - 「〇〇を選んだ理由は何かありますか？」
-    - クライアントの言葉をリフレインしながら深めていく
-    - セットアップ（コーチングをするための準備）
 
-#### 2. ゴール決め
+優れたコーチは、人生の意義や希望を照らし、かつて失っていた感情を再燃させることをします。
+理想の未来を実現するために、コーチは相手が人生において何に意味や目的を見出すのかを理解し、それを達成できると信じる必要があります。
+
+- 理想の自分の探索
+    - どういう人間になりたいのか？（なるべき姿 ≠ あるべき姿）
+    - 人生をどのように生きたいのか？
+- 自己効力感を高める
+    - 何ができるのかについて希望や楽観を持てるように励ます
+- 夢を描く
+    - 希望や情熱から導かれる夢、願望、空想はどんなものか？
+
+これらの質問や対話を通して、参加者は自分が考えるパーソナルビジョンや、さらに家族や職場などの組織を含めた大きな社会的大義を含む「共有ビジョン」を明確に説明できるようになります。
+
+
+<br>
+
+### 2. ゴール決め
+
+参加者がすである程度の目標を持っているときは、誘導型のコーチングが助けになる場合がありますが、そうしたコーチングは持続的な変化を導くことは難しいです。
+大切なことは、参加者の考えを尊重し、みんながそれぞれの人生において望ましい成長や変化を遂げる方法を見つける手助けをすることです。
+そして、コーチはインスピレーションやアイデアの種をまいて、あとは参加者自身が自分の最善の方向に持っていけるように自由にやらせて、コーチはその選択を励まし、支えてあげる存在となることです。
+するべきことを従順に果たすだけの人生を送るのではなく、パーソナルビジョンを実現するために手助けをするのがコーチの役割です。
 
 - （前提条件）テーマを設定した背景が明確であること
 - （前提条件）新しい行動を取れる心の状態になっていること
+    - 一言で説明すると、参加者とコーチの両方がマインドフル（自己認識が高く、自身の感情をコントロールできる状態）であること
 - GROWモデルを使ってゴールを設定する
     - **Goal** (ゴール)：
         - 具体的に目指すべき目標とその目的を明確にする
@@ -69,7 +104,22 @@ photoswipe:    false
     - 「〇〇などはどう思いますか？」
     - 「〇〇をしたらどうなりそうですか？」
 
-#### 3. 意思決定
+人は大体、変化を望んだときにしか行動を変えません。
+何を変えるか、いかに変えるかについて自分の内側に強い願望がなければ、目に見える変化は長く続かないです。
+そこで、コーチの役割としては以下のものがあります。
+
+- 相手の「現実の自分」を明らかにする
+    - 「理想の自分」と比較しながら、理想の自分と現実の自分がすでに一致している領域（本人の強み）を特定する。弱みよりも強みに注力することで弱みを補うことができるため
+    - フィードバックや360度評価を通して、自己認識（他人からどう思われているか）を正確に捉える
+
+
+<br>
+
+### 3. 意思決定
+
+人が自分の夢やビジョンを追求する中で、目の前の具体的な問題を解決しつつ、新しいアイデアを追求するよう刺激することや、人々がそれぞれの人生において持続的な望ましい変化を起こすの手助けすることがコーチには求められます。
+優れたコーチは、心からの思いやりを示し、進んでその心遣いに見合った行動をとり、夢に到達しようとする相手に必要な助言や支援を差し出します。
+また、優れたコーチは、相手にうまくインスピレーションを与えます。コーチングにおける対話が終わると、相手は充電されたように感じ、興奮し、夢に向かって決然と動き出そうとするはずです。このとき、充電されたと感じるのはコーチされる側だけでなくコーチする側も刺激を受けるはずです。
 
 - （前提条件）ゴールが明確になっていること
 - （前提条件）クライアントの価値観・自分軸が明確であること
@@ -100,7 +150,25 @@ photoswipe:    false
     - 「〜を目指してもらいたいです。なぜなら〜」
     - 「〜をしてみてもらいたいです。なぜなら〜」
 
-#### 4. 勇気づけ
+変わらないければならないと言われた人よりも、変わりたいと思う人の方が、持続可能な努力によって変化を遂げる確率がはるかに高くなります。
+ここで重要なのは「強い願望」が「義務感」を上回ることです。
+同様に、善意のつもりだとしても、誘導型コーチングを行うと、参加者は防衛的なストレス反応が現れます。
+これは学習や変化を遮断する作用の引き金となります。
+逆に、思いやりのコーチングでは、ポジティブな感情を刺激し、興奮や高揚感によって副交感神経を活性化して、新たな学びや持続性な変化への道が開かれる。
+
+
+<br>
+
+### 4. 勇気づけ
+
+優れたコーチは、内省を促し、相手にとって一番重要で意義のある物事を明らかにするような質問を行います。
+しかし、たとえ意義や目的に気づいても、希望が感じられなければ人は前へ動き出すことができません。
+そこで、コーチは希望を生み出す手助けも行います。
+自分の意思で、気持ちを集中させて努力をすれば、思い描いた理想の未来は達成可能であるという自信を植え付けることを行います。
+
+また、コーチは、理想の自分と現実の自分を比較する中で、参加者の弱みではなく強みにフォーカスを当てて、理想とのギャップを埋めるためにその強みを活用できないか考えるように促します。
+ここで重要なのは、理想の自分に近づく支援を行う中で、参加者が何をするときに一番高揚するかを考えることです。
+他人の指示ではなく、自分の目的やビジョンへ向かっている実感こそが、挑戦への一歩を踏み出す勇気となります。
 
 - （前提条件）何のためにどのような行動をするかが明確だが、挑戦への一歩が踏み出せない
 - 勇気づけを行う
@@ -113,6 +181,11 @@ photoswipe:    false
 - 自己実現
     - 現代社会において、周囲の価値観に重きを置くと自分が望んでいたことが何かわからなくなり、自分の力を発揮できなくなる
     - 自己実現傾向を取り戻すには、無条件で受容し、正確に理解し共感しようとしてくれる自己一致した他者（コーチ）との出会いが必要（ロジャーズの実現傾向）
+
+さらに、コーチングが終わったあとも、信頼できて支えとなってくれる人々（個人のための取締役会）から引き続き支援を与えることが必要です。
+対象者が大きな行動の変化をするときは困難を伴いますが、孤立した状態ではさらに困難になります。
+変化への努力はポジティブな感情を基軸とした人と人とのつながりがあってこそ成功するものです。
+個人のための取締役会と呼ばれる社会的アイデンティティ・グループを通して、自分を大切に思い、助けてくれる人々のグループから恩恵を受けることで、変化のプロセスを活性化し続けることができるのです。
 
 
 <br>
@@ -179,4 +252,6 @@ photoswipe:    false
 
 - 宮越 大樹『[人生を変える!「コーチング脳」のつくり方](https://amzn.to/3NSLecf)』2021, ぱる出版
     - アドラー心理学の考え方を前提としてコーチングの方法について書かれている本です。アドラー心理学とコーチングの両方に興味がある方におすすめです。
-    - 著者がYouTubeでアドラー心理学に基づいたコーチングについて説明している動画「[アドラーの思想とコーチング](https://www.youtube.com/watch?v=jYx6d1M5Oxs&ab_channel=%E3%83%97%E3%83%AD%E3%82%B3%E3%83%BC%E3%83%81Channel)」もあります。参考までに
+    - 著者がYouTubeでアドラー心理学に基づいたコーチングについて説明している動画もあります。
+- リチャード・ボヤツィス (著), メルヴィン・L・スミス (著), エレン・ヴァン・オーステン (著)『[成長を支援するということ――深いつながりを築き、「ありたい姿」から変化を生むコーチングの原則](https://amzn.to/4borDeI)』2024/4, 英治出版
+    - 誘導型のコーチング（問題を解決しようとすること）ではなく、思いやりのコーチング（ありたい姿の探求とその実現を手助けすること）が、持続可能な努力と成長を支援する方法として紹介されている本です。
