--- a/_posts/psychology/2023-08-09-coaching.md
+++ b/_posts/psychology/2023-08-09-coaching.md
@@ -37,11 +37,13 @@ photoswipe:    false
         - 目的が何でゴールはどんな状態で、そのための効果的なアクションは何か
     - 勇気とは、クライアントのエネルギーであり、やりたい・やれそうという実感（自己効力感）
 
+
 <br>
 
 ### 1. テーマ決め
 
-テーマは最終的には将来の夢に繋げることを見据えて設定します。
+コーチングでは、参加者が理想の自分や将来のビジョンを探究したり、表明したりするのを手伝うことから始まります。
+そのため、テーマは最終的には将来の夢に繋げることを見据えて設定します。
 長期的な夢やビジョンがあるとき、人はそのビジョンからエネルギーを引き出し、困難があっても変化のための努力を続けることができるためです。
 長期的な夢やビジョンはすなわち「理想の自分」を明確にするところから始まります。
 
@@ -55,26 +57,33 @@ photoswipe:    false
 - 理想の自分の探索
     - どういう人間になりたいのか？（なるべき姿 ≠ あるべき姿）
     - 人生をどのように生きたいのか？
+    - 私の価値観（価値観や信念のリストから自分にとって最も重要な項目を選び順位づけすること）
 - 自己効力感を高める
     - 何ができるのかについて希望や楽観を持てるように励ます
 - 夢を描く
     - 希望や情熱から導かれる夢、願望、空想はどんなものか？
+    - バケツリスト（死ぬまでにやりたいこと、達成したいことをリストに書くこと）
+    - 宝くじに当たったら（10億円が手に入ったとき、あなたの人生や仕事はどう変わるか考える）
+    - 今から15年後のあなたの1日（未来の理想の人生を想像する）
+    - 私が残すもの（自分の人生の遺産として何を残したいか）
 
 これらの質問や対話を通して、参加者は自分が考えるパーソナルビジョンや、さらに家族や職場などの組織を含めた大きな社会的大義を含む「共有ビジョン」を明確に説明できるようになります。
+パーソナルビジョンとは、理想の自分や理想の将来を表現したもので、例えば、夢、価値観、情熱、目的、天職、アイデンティティといった要素が含まれます。
+やりたいことではなく、なりたい自分を表明することがパーソナルビジョンになります。
+短期的なスパンで物事を見るのではなく、数年後の長期的なスパンに視点を向けることが重要で、「何がしたいのか？」ではなく「数年後にどんな人間になりたいのか？」という質問が効果的です。
+ポジティブな未来を思い描くことが、理想の自分を探ることを手助けするのかコーチングを始める時に重要になります。
 
 
 <br>
 
 ### 2. ゴール決め
 
-参加者がすである程度の目標を持っているときは、誘導型のコーチングが助けになる場合がありますが、そうしたコーチングは持続的な変化を導くことは難しいです。
-大切なことは、参加者の考えを尊重し、みんながそれぞれの人生において望ましい成長や変化を遂げる方法を見つける手助けをすることです。
-そして、コーチはインスピレーションやアイデアの種をまいて、あとは参加者自身が自分の最善の方向に持っていけるように自由にやらせて、コーチはその選択を励まし、支えてあげる存在となることです。
-するべきことを従順に果たすだけの人生を送るのではなく、パーソナルビジョンを実現するために手助けをするのがコーチの役割です。
+ゴールの決め方は、欠点に着目して改善計画を立てるより、強みに着目して本人のやる気が掻き立てたれることに焦点を当てて学習計画を考案しましょう。
+もし、強みや弱みの認識がまだはっきりしないときは、PBS（パーソナルバランスシート）などを使って対象者の資産（強み）と負債（弱みやギャップ）を把握させましょう。
 
 - （前提条件）テーマを設定した背景が明確であること
 - （前提条件）新しい行動を取れる心の状態になっていること
-    - 一言で説明すると、参加者とコーチの両方がマインドフル（自己認識が高く、自身の感情をコントロールできる状態）であること
+    - 参加者とコーチの両方がマインドフル（自己認識が高く、自身の感情をコントロールできる状態）であること
 - GROWモデルを使ってゴールを設定する
     - **Goal** (ゴール)：
         - 具体的に目指すべき目標とその目的を明確にする
@@ -111,6 +120,11 @@ photoswipe:    false
 - 相手の「現実の自分」を明らかにする
     - 「理想の自分」と比較しながら、理想の自分と現実の自分がすでに一致している領域（本人の強み）を特定する。弱みよりも強みに注力することで弱みを補うことができるため
     - フィードバックや360度評価を通して、自己認識（他人からどう思われているか）を正確に捉える
+
+参加者がすである程度の目標を持っているときは、誘導型のコーチングが助けになる場合がありますが、そうしたコーチングは持続的な変化を導くことは難しいです。
+大切なことは、参加者の考えを尊重し、みんながそれぞれの人生において望ましい成長や変化を遂げる方法を見つける手助けをすることです。
+そして、コーチはインスピレーションやアイデアの種をまいて、あとは参加者自身が自分の最善の方向に持っていけるように自由にやらせて、コーチはその選択を励まし、支えてあげる存在となることです。
+するべきことを従順に果たすだけの人生を送るのではなく、パーソナルビジョンを実現するために手助けをするのがコーチの役割です。
 
 
 <br>
@@ -150,11 +164,12 @@ photoswipe:    false
     - 「〜を目指してもらいたいです。なぜなら〜」
     - 「〜をしてみてもらいたいです。なぜなら〜」
 
+変化を定着させるには心の底からのモチベーションが必要です。
 変わらないければならないと言われた人よりも、変わりたいと思う人の方が、持続可能な努力によって変化を遂げる確率がはるかに高くなります。
 ここで重要なのは「強い願望」が「義務感」を上回ることです。
 同様に、善意のつもりだとしても、誘導型コーチングを行うと、参加者は防衛的なストレス反応が現れます。
 これは学習や変化を遮断する作用の引き金となります。
-逆に、思いやりのコーチングでは、ポジティブな感情を刺激し、興奮や高揚感によって副交感神経を活性化して、新たな学びや持続性な変化への道が開かれる。
+逆に、思いやりのコーチングでは、ポジティブな感情を刺激し、興奮や高揚感によって副交感神経を活性化して、新たな学びや持続性な変化への道が開かれます。
 
 
 <br>
@@ -188,7 +203,7 @@ photoswipe:    false
 個人のための取締役会と呼ばれる社会的アイデンティティ・グループを通して、自分を大切に思い、助けてくれる人々のグループから恩恵を受けることで、変化のプロセスを活性化し続けることができるのです。
 
 
-<br>
+<!--
 
 ### コミュニケーション
 
@@ -244,7 +259,7 @@ photoswipe:    false
 
 - 断りを入れてから、これまでの話を聞いた中で自分が感じたことをクライアントに伝える
 
-
+-->
 
 <br>
 
