--- a/_posts/psychology/2023-08-09-coaching.md
+++ b/_posts/psychology/2023-08-09-coaching.md
@@ -83,7 +83,7 @@ photoswipe:    false
 
 - （前提条件）テーマを設定した背景が明確であること
 - （前提条件）新しい行動を取れる心の状態になっていること
-    - 参加者とコーチの両方がマインドフル（自己認識が高く、自身の感情をコントロールできる状態）であること
+    - 参加者とコーチの両方ともマインドフル（自己認識が高く、自身の感情をコントロールできる状態）であること
 - GROWモデルを使ってゴールを設定する
     - **Goal** (ゴール)：
         - 具体的に目指すべき目標とその目的を明確にする
@@ -201,6 +201,39 @@ photoswipe:    false
 対象者が大きな行動の変化をするときは困難を伴いますが、孤立した状態ではさらに困難になります。
 変化への努力はポジティブな感情を基軸とした人と人とのつながりがあってこそ成功するものです。
 個人のための取締役会と呼ばれる社会的アイデンティティ・グループを通して、自分を大切に思い、助けてくれる人々のグループから恩恵を受けることで、変化のプロセスを活性化し続けることができるのです。
+
+
+<br>
+
+### コミュニケーション全般
+
+コーチングのコミュニケーションでは以下の視点が大切になります。
+
+- ポジティブな感情
+    - PEA (Positive Emotional Attractor) はストレスを軽減する再生ホルモンを活性化することで、安全、希望、喜びなどの感情を生み出し、私たちの繁栄を可能にする。
+    - NEA (Negative Emotional Attractor) はストレスホルモンを活性化することで、脅威に対抗するための闘争、逃走などの反応を引き出し、私たちの生存を助ける。
+    - 変化や学びのプロセスを維持するには、NEAよりもPEAの影響下にいる時間が多く必要である（具体的には2〜5倍程度）
+- 共鳴する関係
+    - 個人は他者とのやり取りから感情の伝染や模倣を通して影響を受ける。
+    - コーチや支援者は互いの気分や感情に対して多大な影響力を持っていることを忘れてはならない。そのため、自分の内面のバランスが整っている状態でコーチングに臨む必要があります。
+    - 成長への努力を維持できるのは、共有ビジョンがあり、1人以上、もしくは1つのネットワークから支援が受けられるときです。
+- アクティブリスニング（積極的な傾聴）
+    - 全ての注意を相手に向けて、意識を総動員して耳を傾けること。相手の考えやメッセージを完全に理解し、たとえ賛同できなくても相手の見解を尊重すること
+    - 相手の言葉を遮らない。言葉の終わりを先取りしない。相手の言いたいことを無意識でわかった気にならない。アドバイスや命令をしない。相手を意識し続けること
+- オープンクエスチョン（YES/NOで回答できない質問）
+    - 具体化：「例えば？」「具体的には？」
+    - 網羅：「他には？」「もっと話してください」
+    - 目的：「どうして？」「何のため？」「何がそうさせているのだろう？」
+    - 抽象化：「つまり？」「まとめると？」
+- WAIT (Why am I talking?: なぜ私が話しているのか？)
+    - もし自分が喋りすぎていると感じたら、それはコーチングではない。自分語りか、教えているか、管理しているか、命令しているかのいずれかである。何か質問をして焦点を自分からコーチング対象者に戻すと良いでしょう
+- コーチングのマインドセット
+    1. 変化は一連のプロセスであり、時間を要すると心得ること
+    2. 誰の中にも金（ゴールド）が存在することを信じ、その宝を見つけるために何トンもの土砂を掻き出すことが自分の仕事と心得ること
+    3. 常に対象者の気持ちに集中すること。対話のトピックは自分で決めずに相手に任せること
+
+
+
 
 
 <!--
