--- a/_posts/psychology/2023-08-09-coaching.md
+++ b/_posts/psychology/2023-08-09-coaching.md
@@ -22,11 +22,11 @@ photoswipe:    false
 
 いつ、どのようにして、あの熱意を失ってしまったのか。忙しい日々を過ごす中で、私たちは自分の本物の熱意や願望を見失うこともあります。
 私たちはコーチとお話しする中で、人生において心から望む物事と、やらなければならない物事を明確に切り分け、本当にやりたいことを見つけることで、ポジティブなエネルギーとモチベーションを生み出すことを求めています。
-逆に、コーチは、現在直面している問題を修正する一時凌ぎのような解決では不十分で、その努力は持続可能なのかを考えなければなりません。
-その人からエネルギーを引き出すことができなければ、困難に直面した時に変化するための努力をやめてしまうためです。
+逆に、コーチは、現在直面している問題を一時凌ぎで解決するだけでは不十分で、その努力は持続可能なのかを考えなければなりません。
+その人からエネルギーを引き出すことができなければ、困難に直面したときに、変化するための努力をやめてしまうためです。
 コーチングとは、持続可能な努力を続けることができる状況を作り出せる支援といえます。
 
-コーチングは対話から始まります。対話において向けるべき視点は以下のものがあります。
+コーチングの対話において、向けるべき視点は以下のものがあります。
 
 - 質問ではなく探求する
     - あなたのことをより知りたいという気持ちを持つこと（相手に関心を向ける）
@@ -43,15 +43,11 @@ photoswipe:    false
 ### 1. テーマ決め
 
 コーチングでは、参加者が理想の自分や将来のビジョンを探究したり、表明したりするのを手伝うことから始まります。
-そのため、テーマは最終的には将来の夢に繋げることを見据えて設定します。
+そのため、テーマは最終的に将来の夢に繋げることを見据えて設定します。
 長期的な夢やビジョンがあるとき、人はそのビジョンからエネルギーを引き出し、困難があっても変化のための努力を続けることができるためです。
 長期的な夢やビジョンはすなわち「理想の自分」を明確にするところから始まります。
 
-- 今日話すことの内容を決める
-    - 「今日テーマとしてお話ししたいことはありますか？」
-    - 「〇〇を選んだ理由は何かありますか？」
-
-優れたコーチは、人生の意義や希望を照らし、かつて失っていた感情を再燃させることをします。
+優れたコーチは、その人の人生の意義を見つけ、人生に希望を照らし、かつて失っていた感情を再燃させます。
 理想の未来を実現するために、コーチは相手が人生において何に意味や目的を見出すのかを理解し、それを達成できると信じる必要があります。
 
 - 理想の自分の探索
@@ -210,8 +206,8 @@ photoswipe:    false
 コーチングのコミュニケーションでは以下の視点が大切になります。
 
 - ポジティブな感情
-    - PEA (Positive Emotional Attractor) はストレスを軽減する再生ホルモンを活性化することで、安全、希望、喜びなどの感情を生み出し、私たちの繁栄を可能にする。
-    - NEA (Negative Emotional Attractor) はストレスホルモンを活性化することで、脅威に対抗するための闘争、逃走などの反応を引き出し、私たちの生存を助ける。
+    - PEA (Positive Emotional Attractor; ポジティブな感情を誘引する因子) はストレスを軽減する再生ホルモンを活性化することで、安全、希望、喜びなどの感情を生み出し、私たちの繁栄を可能にする。
+    - NEA (Negative Emotional Attractor; ネガティブな感情を誘引する因子) はストレスホルモンを活性化することで、脅威に対抗するための闘争、逃走などの反応を引き出し、私たちの生存を助ける。
     - 変化や学びのプロセスを維持するには、NEAよりもPEAの影響下にいる時間が多く必要である（具体的には2〜5倍程度）
 - 共鳴する関係
     - 個人は他者とのやり取りから感情の伝染や模倣を通して影響を受ける。
