--- a/_posts/psychology/2023-08-09-coaching.md
+++ b/_posts/psychology/2023-08-09-coaching.md
@@ -42,32 +42,40 @@ photoswipe:    false
 
 ### 1. テーマ決め
 
-コーチングでは、参加者が理想の自分や将来のビジョンを探究したり、表明したりするのを手伝うことから始まります。
+コーチングでは、クライアントが理想の自分や将来のビジョンを探究したり、表明したりするのを手伝うことから始まります。
 そのため、テーマは最終的に将来の夢に繋げることを見据えて設定します。
 長期的な夢やビジョンがあるとき、人はそのビジョンからエネルギーを引き出し、困難があっても変化のための努力を続けることができるためです。
 長期的な夢やビジョンはすなわち「理想の自分」を明確にするところから始まります。
 
-優れたコーチは、その人の人生の意義を見つけ、人生に希望を照らし、かつて失っていた感情を再燃させます。
-理想の未来を実現するために、コーチは相手が人生において何に意味や目的を見出すのかを理解し、それを達成できると信じる必要があります。
+その人の人生の意義を見つけ、人生に希望を照らし、かつて失っていた感情を再び燃やします。
+理想の未来を実現するために、コーチは相手が人生において何に意味や目的を見出すのかを理解し、それを達成できると信じます。
 
 - 理想の自分の探索
-    - どういう人間になりたいのか？（なるべき姿 ≠ あるべき姿）
+    - どういう人間でありたいのか？（なるべき姿ではなく、あるべき姿）
     - 人生をどのように生きたいのか？
     - 私の価値観（価値観や信念のリストから自分にとって最も重要な項目を選び順位づけすること）
 - 自己効力感を高める
     - 何ができるのかについて希望や楽観を持てるように励ます
+    - [自己肯定感](../psychology/self-affirmation) のページ参照
+        - 自己実現：変えられないものを受け入れ、変えられるものを変えていく勇気を持つこと（アドラー心理学の自己受容）
+        - 社会貢献：誰かの役に立つこと（アドラー心理学の貢献感・所属感、またはそれらの総称である共同体感覚）
 - 夢を描く
-    - 希望や情熱から導かれる夢、願望、空想はどんなものか？
+    - 希望や情熱から導かれる夢、願望、想像はどんなものか？
     - バケツリスト（死ぬまでにやりたいこと、達成したいことをリストに書くこと）
     - 宝くじに当たったら（10億円が手に入ったとき、あなたの人生や仕事はどう変わるか考える）
     - 今から15年後のあなたの1日（未来の理想の人生を想像する）
     - 私が残すもの（自分の人生の遺産として何を残したいか）
 
-これらの質問や対話を通して、参加者は自分が考えるパーソナルビジョンや、さらに家族や職場などの組織を含めた大きな社会的大義を含む「共有ビジョン」を明確に説明できるようになります。
+これらの質問や対話を通して、クライアントは自分が考えるパーソナルビジョンや、さらに家族や職場などの組織を含めた大きな社会的大義を含む「共有ビジョン」を明確に説明できるようになります。
 パーソナルビジョンとは、理想の自分や理想の将来を表現したもので、例えば、夢、価値観、情熱、目的、天職、アイデンティティといった要素が含まれます。
 やりたいことではなく、なりたい自分を表明することがパーソナルビジョンになります。
 短期的なスパンで物事を見るのではなく、数年後の長期的なスパンに視点を向けることが重要で、「何がしたいのか？」ではなく「数年後にどんな人間になりたいのか？」という質問が効果的です。
 ポジティブな未来を思い描くことが、理想の自分を探ることを手助けするのかコーチングを始める時に重要になります。
+
+#### 達成目標
+
+- クライアント自身が、理想の自分を明確に相手に伝えることができる
+- クライアントとコーチの両方ともマインドフル（自己認識が高く、自身の感情をコントロールできる状態）である
 
 
 <br>
@@ -75,52 +83,44 @@ photoswipe:    false
 ### 2. ゴール決め
 
 ゴールの決め方は、欠点に着目して改善計画を立てるより、強みに着目して本人のやる気が掻き立てたれることに焦点を当てて学習計画を考案しましょう。
-もし、強みや弱みの認識がまだはっきりしないときは、PBS（パーソナルバランスシート）などを使って対象者の資産（強み）と負債（弱みやギャップ）を把握させましょう。
+強みや弱みの認識がまだはっきりしないときは、PBS（パーソナルバランスシート）などを使って対象者の資産（強み）と負債（弱みやギャップ）を把握することを優先しましょう。
+すぐにゴールが見つからないとき、コーチはインスピレーションやアイデアの種をまいてあげます。
+そのあとは、クライアント自身が自分の最善の方向に持っていけるように自由にやらせて、コーチはその選択を励まし、支えてあげる存在となることです。
 
-- （前提条件）テーマを設定した背景が明確であること
-- （前提条件）新しい行動を取れる心の状態になっていること
-    - 参加者とコーチの両方ともマインドフル（自己認識が高く、自身の感情をコントロールできる状態）であること
 - GROWモデルを使ってゴールを設定する
-    - **Goal** (ゴール)：
-        - 具体的に目指すべき目標とその目的を明確にする
-        - 「あなたが達成したい目標は何ですか？」
-        - 「何のためにこの目標を達成したいのですか？」
-        - 「目標を達成することで何を手に入れられると思いますか？」
-        - 「具体的にどんな状態を目指したいですか？」(Specific; 具体的)
-        - 「N週間・Nカ月・N年後までに、どんなゴールを達成したいですか？」(Timed; 期限付き)
-        - 「それは何をすれば/何があれば実現できると思いますか？」(Achievable; 達成可能性)
-        - 「達成したい数値はありますか？」(Measurable; 数値化)
-        - 「この目標に取り組むのは何のためですか？」(Relevant; 目的との関連性)
+    - 具体的に目指すべき目標とその目的を明確にする
+    - 「あなたが達成したい目標は何ですか？」
+    - 「何のためにこの目標を達成したいのですか？」
+    - 「目標を達成することで何を手に入れられると思いますか？」
+    - 「具体的にどんな状態を目指したいですか？」(Specific; 具体的)
+    - 「N週間・Nカ月・N年後までに、どんなゴールを達成したいですか？」(Timed; 期限付き)
+    - 「それは何をすれば/何があれば実現できると思いますか？」(Achievable; 達成可能性)
+    - 「達成したい数値はありますか？」(Measurable; 数値化)
+    - 「この目標に取り組むのは何のためですか？」(Relevant; 目的との関連性)
 - 自分軸を明確にする
-    - 他人軸から作られた目標は偽物の目標になる。他人から評価されたい等。叶っても幸せになれない
-    - 自分軸から作られた目標は**自分が本当に望んでいる目標**になる。叶うと幸せになれる。
-    - 目的は自分自身が幸せになること（常に同じ）。そして幸せとは他者貢献である
+    - 他人軸から作られた目標は偽物の目標になる。
+    - 自分軸から作られた目標は自分が本当に望んでいる目標になる。
+    - 目的は自分自身が幸せになること (常に同じ)。そして幸せとは他者貢献である
     - クライアントのありたい姿は何か。その目的は何かを意識する
 - 目標が作れないときは自己理解を深めてもらう
     - 過去の経験や現在の理想から価値観を発見し、自分軸を明確化させる。
     - 価値観を引き出すには、具体的な経験・思い・感情を聞いてみる
     - 今までの行動から背景にある目的（隠された目的）を探索する（アドラー心理学の目的論）
-    - 人生における重要な目的は：
-        - **自己実現**：変えられないものを受け入れ、変えられるものを変えていく勇気を持つこと（アドラー心理学の自己受容）
-        - **社会貢献**：誰かの役に立つこと（アドラー心理学の貢献感・所属感、またはそれらの総称である共同体感覚）
-    - 納得感の得られる答えは自分自身の中にしかない
-- クライアントが答えを出せない場合のみ、コーチ側からアイデア出しや提案をする
-    - ただし、必ずクライアントの発言の後に質問を使って行う
-    - 「〇〇などはどう思いますか？」
-    - 「〇〇をしたらどうなりそうですか？」
+    - フィードバックや360度評価を通して、自己認識（他人からどう思われているか）を正確に捉える
+    - 「理想の自分」と比較しながら、理想の自分と現実の自分がすでに一致している領域（本人の強み）を特定する。弱みよりも強みに注力することで弱みを補うことができるため
+
+注意点として、コーチが考える理想に誘導してはいけません。
+クライアントがすである程度の目標を持っているときは、誘導型コーチングが助けになる場合がありますが、そうしたコーチングは持続的な変化を導くことは難しいです。
+大切なことは、クライアントの考えを尊重し、みんながそれぞれの人生において望ましい成長や変化を遂げる方法を見つける手助けをすることです。
 
 人は大体、変化を望んだときにしか行動を変えません。
 何を変えるか、いかに変えるかについて自分の内側に強い願望がなければ、目に見える変化は長く続かないです。
-そこで、コーチの役割としては以下のものがあります。
-
-- 相手の「現実の自分」を明らかにする
-    - 「理想の自分」と比較しながら、理想の自分と現実の自分がすでに一致している領域（本人の強み）を特定する。弱みよりも強みに注力することで弱みを補うことができるため
-    - フィードバックや360度評価を通して、自己認識（他人からどう思われているか）を正確に捉える
-
-参加者がすである程度の目標を持っているときは、誘導型のコーチングが助けになる場合がありますが、そうしたコーチングは持続的な変化を導くことは難しいです。
-大切なことは、参加者の考えを尊重し、みんながそれぞれの人生において望ましい成長や変化を遂げる方法を見つける手助けをすることです。
-そして、コーチはインスピレーションやアイデアの種をまいて、あとは参加者自身が自分の最善の方向に持っていけるように自由にやらせて、コーチはその選択を励まし、支えてあげる存在となることです。
+そこで、コーチは相手の「現実の自分」を明らかにする役割があります。
 するべきことを従順に果たすだけの人生を送るのではなく、パーソナルビジョンを実現するために手助けをするのがコーチの役割です。
+
+### 達成目標
+
+- クライアント自身が、学習計画や変化するためのプロセスを策定できる
 
 
 <br>
@@ -131,9 +131,7 @@ photoswipe:    false
 優れたコーチは、心からの思いやりを示し、進んでその心遣いに見合った行動をとり、夢に到達しようとする相手に必要な助言や支援を差し出します。
 また、優れたコーチは、相手にうまくインスピレーションを与えます。コーチングにおける対話が終わると、相手は充電されたように感じ、興奮し、夢に向かって決然と動き出そうとするはずです。このとき、充電されたと感じるのはコーチされる側だけでなくコーチする側も刺激を受けるはずです。
 
-- （前提条件）ゴールが明確になっていること
-- （前提条件）クライアントの価値観・自分軸が明確であること
-- GROWモデルを使ってゴールを達成するための意思決定を行う（pp. 63-66）
+- GROWモデルを使ってゴールを達成するための意思決定を行う
     - **Reality** (現状)：
         - 現状とゴールの差を確認する
         - 「ゴール達成に向けて、これまでに取り組んでことは何ですか？」
@@ -155,17 +153,18 @@ photoswipe:    false
         - 「今日から始められる行動・辞められる行動は何かありますか？」
         - 「その行動をいつどこで誰に対して実行しますか？」
         - 「その行動をさらに効果的にするために工夫できることはありますか？」
-- リクエスト
-    - クライアントにぜひ試してもらいたいことがあれば理由と共に伝える
-    - 「〜を目指してもらいたいです。なぜなら〜」
-    - 「〜をしてみてもらいたいです。なぜなら〜」
 
 変化を定着させるには心の底からのモチベーションが必要です。
 変わらないければならないと言われた人よりも、変わりたいと思う人の方が、持続可能な努力によって変化を遂げる確率がはるかに高くなります。
 ここで重要なのは「強い願望」が「義務感」を上回ることです。
-同様に、善意のつもりだとしても、誘導型コーチングを行うと、参加者は防衛的なストレス反応が現れます。
+同様に、善意のつもりだとしても、誘導型コーチングを行うと、クライアントは防衛的なストレス反応が現れます。
 これは学習や変化を遮断する作用の引き金となります。
 逆に、思いやりのコーチングでは、ポジティブな感情を刺激し、興奮や高揚感によって副交感神経を活性化して、新たな学びや持続性な変化への道が開かれます。
+
+#### 達成目標
+
+- 将来の夢に向けたポジティブな選択ができること
+- クライアント自身が、持続可能な努力を続けられること
 
 
 <br>
@@ -177,8 +176,8 @@ photoswipe:    false
 そこで、コーチは希望を生み出す手助けも行います。
 自分の意思で、気持ちを集中させて努力をすれば、思い描いた理想の未来は達成可能であるという自信を植え付けることを行います。
 
-また、コーチは、理想の自分と現実の自分を比較する中で、参加者の弱みではなく強みにフォーカスを当てて、理想とのギャップを埋めるためにその強みを活用できないか考えるように促します。
-ここで重要なのは、理想の自分に近づく支援を行う中で、参加者が何をするときに一番高揚するかを考えることです。
+また、コーチは、理想の自分と現実の自分を比較する中で、クライアントの弱みではなく強みにフォーカスを当てて、理想とのギャップを埋めるためにその強みを活用できないか考えるように促します。
+ここで重要なのは、理想の自分に近づく支援を行う中で、クライアントが何をするときに一番高揚するかを考えることです。
 他人の指示ではなく、自分の目的やビジョンへ向かっている実感こそが、挑戦への一歩を踏み出す勇気となります。
 
 - （前提条件）何のためにどのような行動をするかが明確だが、挑戦への一歩が踏み出せない
@@ -188,7 +187,7 @@ photoswipe:    false
     - アドラー心理学における勇気づけを行う
         - 褒めることは、条件付きで行われ、結果が重視され、評価的な態度で、上下関係で行われ、褒める側の価値観が適用される。推奨されない行為。
         - **勇気づけ**は、無条件で行われ、プロセスが重視され、共感的な態度で、横の関係で行われ、勇気づけられる側の興味関心に焦点を当てて、相手を認める。
-    - 前に進ませるには、どうなりたい・どうありたいという意識を強く持たせる
+    - 前に進ませるには、どうありたいという意識を強く持たせる
 - 自己実現
     - 現代社会において、周囲の価値観に重きを置くと自分が望んでいたことが何かわからなくなり、自分の力を発揮できなくなる
     - 自己実現傾向を取り戻すには、無条件で受容し、正確に理解し共感しようとしてくれる自己一致した他者（コーチ）との出会いが必要（ロジャーズの実現傾向）
@@ -197,6 +196,10 @@ photoswipe:    false
 対象者が大きな行動の変化をするときは困難を伴いますが、孤立した状態ではさらに困難になります。
 変化への努力はポジティブな感情を基軸とした人と人とのつながりがあってこそ成功するものです。
 個人のための取締役会と呼ばれる社会的アイデンティティ・グループを通して、自分を大切に思い、助けてくれる人々のグループから恩恵を受けることで、変化のプロセスを活性化し続けることができるのです。
+
+#### 達成目標
+
+- クライアントが、他の人から持続可能な努力を続けるためのエネルギーを吸収できること
 
 
 <br>
