--- a/_posts/psychology/2023-08-09-coaching.md
+++ b/_posts/psychology/2023-08-09-coaching.md
@@ -164,7 +164,7 @@ photoswipe:    false
 #### 達成目標
 
 - 将来の夢に向けたポジティブな選択ができること
-- クライアント自身が、持続可能な努力を続けられること
+- クライアント自身が、変化をするための持続可能な努力を続けられること
 
 
 <br>
@@ -180,7 +180,6 @@ photoswipe:    false
 ここで重要なのは、理想の自分に近づく支援を行う中で、クライアントが何をするときに一番高揚するかを考えることです。
 他人の指示ではなく、自分の目的やビジョンへ向かっている実感こそが、挑戦への一歩を踏み出す勇気となります。
 
-- （前提条件）何のためにどのような行動をするかが明確だが、挑戦への一歩が踏み出せない
 - 勇気づけを行う
     - 課題に取り組む責任があるのはクライアント自身
     - 行動を起こしづらそうな時は、最初の行動をもっと簡単な小さなものにする
@@ -191,6 +190,13 @@ photoswipe:    false
 - 自己実現
     - 現代社会において、周囲の価値観に重きを置くと自分が望んでいたことが何かわからなくなり、自分の力を発揮できなくなる
     - 自己実現傾向を取り戻すには、無条件で受容し、正確に理解し共感しようとしてくれる自己一致した他者（コーチ）との出会いが必要（ロジャーズの実現傾向）
+- ポジティブな感情を呼び込む
+    - 夢とパーソナルビジョンについて質問する
+    - 思いやりを寄せる。人生で助けになった人を思い出すことで感謝の気持ちやPEAが湧き起こる
+    - 感情の伝播（周囲の人々からポジティブな感情を伝染させ、メンバーが目的意識と思いやりを持てるように手助けをする
+    - マインドフルネス（目の前の物事に気持ちを集中すること）
+    - 遊び心は副交感神経を刺激し、PEAにつながる。冗談にして笑い飛ばすことで、深刻さが薄まる
+    - 自然の中を歩く
 
 さらに、コーチングが終わったあとも、信頼できて支えとなってくれる人々（個人のための取締役会）から引き続き支援を与えることが必要です。
 対象者が大きな行動の変化をするときは困難を伴いますが、孤立した状態ではさらに困難になります。
