update post title

--- a/_posts/java/2020-07-24-string.md
+++ b/_posts/java/2020-07-24-string.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "Javaで文字列操作"
+title:         "[Java] 文字列操作するメソッドの一覧"
 date:          2020-07-24
 category:      Java
 cover:         /assets/cover14.jpg
