--- a/_posts/java/2020-07-27-db.md
+++ b/_posts/java/2020-07-27-db.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "JavaでDB接続とSQL発行"
+title:         "[Java] DB接続とSQL実行"
 date:          2020-07-27
 category:      Java
 cover:         /assets/cover14.jpg
