--- a/_posts/javascript/2021-09-03-PWA.md
+++ b/_posts/javascript/2021-09-03-PWA.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "WebページにPWAを導入してみる"
+title:         "[JavaScript] WebページにPWA (Progressive Web Apps) を導入する"
 date:          2021-09-03
 category:      JavaScript
 cover:         /assets/cover14.jpg
