--- a/_posts/ruby/2016-04-30-dedent.md
+++ b/_posts/ruby/2016-04-30-dedent.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "Rubyでヒアドキュメントのインデントを取り除く方法"
+title:         "[Ruby] ヒアドキュメントのインデントを取り除く方法"
 date:          2016-04-30
 category:      Ruby
 author:        tex2e
