--- a/_posts/java/2020-07-26-io.md
+++ b/_posts/java/2020-07-26-io.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "Javaで入出力(I/O)"
+title:         "[Java] 入出力(I/O)を行うメソッド一覧"
 date:          2020-07-26
 category:      Java
 cover:         /assets/cover14.jpg
