--- a/_posts/javascript/2016-04-30-dedent.md
+++ b/_posts/javascript/2016-04-30-dedent.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "JSでヒアドキュメントのインデントを取り除く方法"
+title:         "[JavaScript] ヒアドキュメントのインデントを取り除く関数の作り方"
 date:          2016-04-30
 category:      JavaScript
 author:        tex2e
