update post title

--- a/_posts/vb.net/2020-05-22-io.md
+++ b/_posts/vb.net/2020-05-22-io.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "VB.NET の IO 関連のメソッド"
+title:         "[VB.NET] IO関連のメソッド一覧"
 date:          2020-05-22
 category:      VB.NET
 cover:         /assets/cover14.jpg
@@ -18,7 +18,7 @@ VB.NET で入出力関連の関数・メソッドの一覧
 
 #### ファイルの新規作成 (File.Create)
 
-```vb.net
+```vb
 'Imports System.Text
 
 Dim stream As FileStream = File.Create("C:\temp\test.txt") 'ファイル作成
@@ -29,14 +29,14 @@ stream.Close()
 
 #### ディレクトリの作成 (Directory.CreateDirectory)
 
-```vb.net
+```vb
 Dim dirInfo As DirectoryInfo = Directory.CreateDirectory("C:\temp\a")
 Console.WriteLine(dirInfo.FullName()) ' => C:\temp\a
 ```
 
 #### ファイル・ディレクトリ情報 (FileInfo, DirectoryInfo)
 
-```vb.net
+```vb
 'ファイル情報
 Dim fileInfo As New FileInfo("C:\Windows\explorer.exe")
 If fileInfo.Exists Then
@@ -63,7 +63,7 @@ Next
 
 #### ファイル一覧の取得 (directoryInfo.GetFiles)
 
-```vb.net
+```vb
 Dim dirInfo As New DirectoryInfo("C:\temp")
 
 ' 現在のディレクトリのみ検索
@@ -89,7 +89,7 @@ Next
 
 #### メモリストリーム (MemoryStream)
 
-```vb.net
+```vb
 ' Imports System.Text
 
 Dim stream As New MemoryStream
