--- a/_posts/vb.net/2020-05-25-db.md
+++ b/_posts/vb.net/2020-05-25-db.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "VB.NET で DB 接続と SQL 発行"
+title:         "[VB.NET] DB接続とSQLの実行"
 date:          2020-05-25
 category:      VB.NET
 cover:         /assets/cover14.jpg
@@ -18,7 +18,7 @@ VB.NET でDBと接続する方法
 
 #### 結果データの取得
 
-```vb.net
+```vb
 Dim connectionString As String = "Data Source=.\SQLEXPRESS;Initial Catalog=pr_cs_sampleDB;Integrated Security=True"
 Dim sql As String = "SELECT TITLE,TYPE,PRICE FROM books WHERE TYPE = @type"
 
@@ -38,7 +38,7 @@ End Using
 
 #### データセットに結果を流し込む
 
-```vb.net
+```vb
 Dim connectionString As String = "Data Source=.\SQLEXPRESS;Initial Catalog=pr_cs_sampleDB;Integrated Security=True"
 Dim sql As String = "SELECT TITLE,TYPE,PRICE FROM books WHERE TYPE = @type"
 Dim dataset As New DataSet
@@ -67,7 +67,7 @@ End Using
 
 #### 更新系SQLの発行
 
-```vb.net
+```vb
 Dim connectionString As String = "Data Source=.\SQLEXPRESS;Initial Catalog=pr_cs_sampleDB;Integrated Security=True"
 Dim sql As String = "INSERT INTO books(BOOK_ID,TITLE,TYPE,PRICE) VALUES(@id, @title, @type, @price)"
 
@@ -85,7 +85,7 @@ End Using
 
 #### 単一の値を取得するSQL
 
-```vb.net
+```vb
 Dim connectionString As String = "Data Source=.\SQLEXPRESS;Initial Catalog=pr_cs_sampleDB;Integrated Security=True"
 Dim sql As String = "SELECT COUNT(*) FROM books WHERE TYPE = @type"
 
