update post, linux/fix/date

--- a/_posts/linux/2021-10-10-fix-date.md
+++ b/_posts/linux/2021-10-10-fix-date.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "CentOSのタイムゾーンと時刻を手動で修正する"
+title:         "[Linux] タイムゾーンと時刻を手動で修正する"
 date:          2021-10-10
 category:      Linux
 cover:         /assets/cover14.jpg
@@ -13,15 +13,17 @@ photoswipe:    false
 # feed:    false
 ---
 
-CentOSでNTPが使えない環境でタイムゾーンと時刻を手動で修正するには timedatectl と date -s コマンドを使います。
+Linux (CentOS) でNTPが使えない環境で、タイムゾーンと時刻を手動で修正するには timedatectl と date -s コマンドを使います。
 
 まずは、コンピュータの時刻を確認します。
+
 ```bash
 $ date
 Wed Oct 20 09:33:03 EDT 2021
 ```
 
 次に、タイムゾーンの修正と、date の -s オプションで現在時刻の設定します。
+
 ```bash
 $ sudo timedatectl set-timezone Asia/Tokyo
 
@@ -32,6 +34,7 @@ Wed Oct 20 13:33:00 JST 2021
 この時点で時刻の設定が完了しました。
 
 アクセスログに書き込む時間を正しいものにするため、必要に応じてサービスの再起動します。
+
 ```bash
 $ sudo systemctl restart httpd
 ```
