--- a/_posts/shell/2021-03-28-top-bn1.md
+++ b/_posts/shell/2021-03-28-top-bn1.md
@@ -2,9 +2,9 @@
 layout:        post
 title:         "topコマンドの結果をファイルに出力する"
 date:          2021-03-28
-category:      Linux
+category:      Shell
 cover:         /assets/cover14.jpg
-redirect_from:
+redirect_from: /linux/top-bn1
 comments:      true
 published:     true
 latex:         false
