--- a/_posts/windowsbatch/2020-08-30-autorun.md
+++ b/_posts/windowsbatch/2020-08-30-autorun.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "コマンドプロンプトでlsを使う"
+title:         "[Windows] コマンドプロンプトでlsを使う"
 date:          2020-08-30
 category:      WindowsBatch
 cover:         /assets/cover14.jpg
