update post title

--- a/_posts/powershell/2021-01-11-open.md
+++ b/_posts/powershell/2021-01-11-open.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "PowerShellでopenコマンド"
+title:         "[PowerShell] MacOSのopenコマンドを作る"
 date:          2021-01-11
 category:      PowerShell
 cover:         /assets/cover1.jpg
