--- a/_posts/powershell/2022-03-01-New-Item.md
+++ b/_posts/powershell/2022-03-01-New-Item.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "PowerShellでNew-Itemの出力結果を表示させない方法"
+title:         "[PowerShell] New-Itemの出力結果を表示させない方法"
 date:          2022-03-01
 category:      PowerShell
 cover:         /assets/cover14.jpg
