--- a/_posts/powershell/2022-04-05-array.md
+++ b/_posts/powershell/2022-04-05-array.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "PowerShellの配列と連想配列"
+title:         "[PowerShell] 配列と連想配列の使い方"
 date:          2022-04-05
 category:      PowerShell
 cover:         /assets/cover14.jpg
