--- a/_posts/powershell/2022-04-06-read-xml.md
+++ b/_posts/powershell/2022-04-06-read-xml.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "PowerShellでXMLデータを読み取る"
+title:         "[PowerShell] XMLデータを読み取る"
 date:          2022-04-06
 category:      PowerShell
 cover:         /assets/cover14.jpg
