--- a/_posts/powershell/2022-04-10-function.md
+++ b/_posts/powershell/2022-04-10-function.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "PowerShellの関数とパイプライン"
+title:         "[PowerShell] 関数とパイプラインの使い方"
 date:          2022-04-10
 category:      PowerShell
 cover:         /assets/cover14.jpg
