--- a/_posts/powershell/2021-01-23-which.md
+++ b/_posts/powershell/2021-01-23-which.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "PowerShellでLinuxのwhichコマンドを作る"
+title:         "[PowerShell] Linuxのwhichコマンドを作る"
 date:          2021-01-23
 category:      PowerShell
 cover:         /assets/cover1.jpg
