--- a/_posts/powershell/2021-11-05-list-user.md
+++ b/_posts/powershell/2021-11-05-list-user.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "PowerShellでユーザの一覧を表示する"
+title:         "[PowerShell] Windowsユーザの一覧を表示する"
 date:          2021-11-05
 category:      PowerShell
 cover:         /assets/cover1.jpg
