--- a/_posts/powershell/2022-04-02-comments.md
+++ b/_posts/powershell/2022-04-02-comments.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "PowerShellで複数行コメント"
+title:         "[PowerShell] 複数行コメントの書き方"
 date:          2022-04-02
 category:      PowerShell
 cover:         /assets/cover14.jpg
