--- a/_posts/python/2020-01-14-tf-idf.md
+++ b/_posts/python/2020-01-14-tf-idf.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "scikit-learn で tf-idf を求める"
+title:         "[Python] scikit-learn で tf-idf を求める"
 date:          2020-01-14
 category:      Python
 cover:         /assets/cover14.jpg
