mv perl,php to program

--- a/_posts/program/php/2016-12-03-OOP-in-PHP.md
+++ b/_posts/program/php/2016-12-03-OOP-in-PHP.md
@@ -1,11 +1,11 @@
 ---
 layout:        post
-title:         "OOP in PHP"
+title:         "[PHP] OOP in PHP"
 date:          2016-12-03
-category:      PHP
+category:      Program
 author:        tex2e
 cover:         /assets/cover14.jpg
-redirect_from:
+redirect_from: /php/OOP-in-PHP
 comments:      false
 published:     true
 ---
