--- a/_posts/perl/2017-03-10-OOP-in-perl6.md
+++ b/_posts/perl/2017-03-10-OOP-in-perl6.md
@@ -1,13 +1,14 @@
 ---
 layout:        post
-title:         "OOP in Raku (Perl6)"
+title:         "[Perl6] OOP in Raku"
 date:          2017-03-10
-category:      Perl
+category:      Program
 author:        tex2e
 cover:         /assets/cover14.jpg
 redirect_from:
     - /perl6/OOP-in-perl6
     - /raku/OOP-in-perl6
+    - /perl/OOP-in-perl6
 comments:      true
 published:     true
 ---
