create new category "programming"

--- a/_posts/programming/php/2016-12-03-OOP-in-PHP.md
+++ b/_posts/programming/php/2016-12-03-OOP-in-PHP.md
@@ -1,11 +1,12 @@
 ---
 layout:        post
-title:         "[PHP] OOP in PHP"
+title:         "[PHP] オブジェクト指向プログラミング"
 date:          2016-12-03
-category:      Program
+category:      Programming
 author:        tex2e
 cover:         /assets/cover14.jpg
-redirect_from: /php/OOP-in-PHP
+redirect_from:
+    - /php/OOP-in-PHP
 comments:      false
 published:     true
 ---
