--- a/_posts/programming/elixir/2017-01-05-elixir-nlp100-00-09.md
+++ b/_posts/programming/elixir/2017-01-05-elixir-nlp100-00-09.md
@@ -2,10 +2,12 @@
 layout:        post
 title:         "[Elixir] 言語処理100本ノック（第1章）"
 date:          2017-01-05
-category:      Program
+category:      Programming
 author:        tex2e
 cover:         /assets/cover14.jpg
-redirect_from: /elixir/nlp100-00-09
+redirect_from:
+    - /elixir/nlp100-00-09
+    - /program/elixir-nlp100-00-09
 comments:      true
 published:     true
 ---
