--- a/_posts/programming/elixir/2017-01-09-elixir-nlp100-10-19.md
+++ b/_posts/programming/elixir/2017-01-09-elixir-nlp100-10-19.md
@@ -2,10 +2,12 @@
 layout:        post
 title:         "[Elixir] 言語処理100本ノック（第2章）"
 date:          2017-01-09
-category:      Program
+category:      Programming
 author:        tex2e
 cover:         /assets/cover14.jpg
-redirect_from: /elixir/nlp100-10-19
+redirect_from:
+    - /elixir/nlp100-10-19
+    - /program/elixir-nlp100-10-19
 comments:      true
 published:     true
 ---
