--- a/_posts/programming/perl/2017-03-10-OOP-in-perl6.md
+++ b/_posts/programming/perl/2017-03-10-OOP-in-perl6.md
@@ -1,8 +1,8 @@
 ---
 layout:        post
-title:         "[Perl6] OOP in Raku"
+title:         "[Perl6] オブジェクト指向プログラミング"
 date:          2017-03-10
-category:      Program
+category:      Programming
 author:        tex2e
 cover:         /assets/cover14.jpg
 redirect_from:
