--- a/_posts/regex/2017-02-19-regex-perl6.md
+++ b/_posts/regex/2017-02-19-regex-perl6.md
@@ -1,12 +1,12 @@
 ---
 layout:        post
-title:         "Perl6 正規表現のメモ"
-menutitle:     "Perl6 正規表現"
+title:         "[Regex] Perl6 正規表現のメモ"
 date:          2017-02-19
-category:      Regex
+category:      Programming
 author:        tex2e
 cover:         /assets/cover14.jpg
 redirect_from:
+    - /regex/perl6-regex
 comments:      false
 published:     true # set to be true
 ---
