--- a/_posts/powershell/2022-04-10-function.md
+++ b/_posts/powershell/2022-04-10-function.md
@@ -187,12 +187,8 @@ PS> & $answer
 42
 ```
 
-一つの引数だけを受け取るには **$_** を使います。複数の引数を受け取るには **param** キーワードを使います。
+スクリプトブロックが引数を受け取るには **param** キーワードを使います。
 ```ps1
-PS> $answer2 = { $_ * 2 }
-PS> & $answer 21
-42
-
 PS> $add = { param($a, $b); $a + $b }
 PS> & $add 3 4
 7
